# hwf

driver/: .gitignore  README.md  build.py  setup.py
driver/llvm/lib/: CMakeLists.txt  README.md
driver/llvm/lib/Analysis/: CMakeLists.txt  FirmwareInterface.cpp
driver/llvm/test/Analysis/: smem-write-byval.c  smem-write-byval.ll  smem-write.c  smem-write.ll
fuzzmod/: Makefile  fuzzmod.c
instrumentation/: .angr_instr.py.swp  angr_instr.py  angr_instr2.py  create_bbdict.py
instrumentation/.ropeproject/: globalnames
